[project]
name = "power-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.1.0",
    "djangorestframework>=3.15.0",
    "mysql-connector-python>=9.0.0",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "djangorestframework-stubs>=3.16.9",
]
