[project]
name = "power-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django",
    "djangorestframework",
    "djangorestframework-stubs",
    "django-cors-headers",
    "drf-spectacular",
    "drf-spectacular-sidecar",
    "pymysql",
    "python-dotenv",
    "pandas",
    "openpyxl",
    "Pillow",
    "blinker"
]
